# yurika_blog

./: .env.example  .gitignore  DEPLOY_GUIDE.md  README.md  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  docker-compose.yml
backend/db/: data.sql  db.sql
backend/webservice/: Cargo.toml
backend/webservice/src/: routers.rs
backend/webservice/src/dbaccess/: blog.rs  comment.rs  user.rs
backend/webservice/src/handlers/: articles.rs  comments.rs  general.rs  mod.rs  users.rs
backend/webservice/src/models/: articles.rs  comments.rs  mod.rs  users.rs
chat-ai/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  requirements.txt
chat-ai/.obsidian/: workspace.json
chat-ai/chat_history/: 20260102.md  20260103.md  20260104.md  20260105.md  20260106.md  20260111.md  20260115.md  20260116.md  20260213.md
chat-ai/controller/: MessageController.go
docs/: API_DOCUMENTATION.md  GITHUB_ACTIONS_GUIDE.md  changelog-2026-03-25.md  docker-build-push.sh  frontend-optimization-report.md
frontend/: .dockerignore  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
images/: blog-stack-images_20260307_013502.tar.sha256  blog-stack-images_20260310_055320.tar.sha256
my-blog/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
my-blog-backend/: .dockerignore  Cargo.toml  blog_backup.sql
my-blog-backend/db/: Cargo.toml
nginx/: nginx.conf
scripts/: download_urls.txt  http_download_report.sh
(+65 files in other folders)
