[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.3.2"
actix-web = "4.3.2"
chrono = {version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
openssl = {version ="0.10.30", features = ["vendored"]}
serde = {version = "1.0.128", features = ["derive"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono",]}
